# rou3-rs

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.chglog/: config.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: coverage.yml  lint.yml  release-please.yml  stale.yml  test.yml
benches/: benchmarks.rs  iai_benchmarks.rs  router_comparison.rs
src/: context.rs  error.rs  lib.rs  types.rs
src/operations/: add.rs  find.rs  find_all.rs  mod.rs  remove.rs  util.rs
tests/: core_functionality.rs
