[package]
name = "rou3"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["MuntasirSZN <muntasir.joypurhat@gmail.com>"]
description = "🌳 Lightweight and fast rou(ter) for Rust"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MuntasirSZN/rou3-rs"
keywords = ["url", "router"]

[dependencies]
ahash = "0.8.12"
indexmap = "2.12.1"
parking_lot = "0.12.5"
thiserror = "2.0.17"

[dev-dependencies]
# Test runner
cargo-nextest = "0.9.114"
# Wall clock time based benchmarking
criterion = "0.7.0"
# More sophisticated benchmarking
iai-callgrind = "0.16.1"
# Tracing in tests etc.
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

# Router comparisons
actix-router = "0.5.3"
gonzales = "0.0.3-beta"
matchit = "0.9.0"
path-tree = "0.8.3"
regex = "1.12.2"
route-recognizer = "0.3.1"
routefinder = "0.5.4"
wayfind = "0.9.0"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "iai_benchmarks"
harness = false

[[bench]]
name = "router_comparison"
harness = false

[profile.release]
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true
strip = false
